--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "App Financeiro",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./ --fix"
-
+    "lint": "eslint ./ --fix",
+    "dev": "tsx watch ./src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Italo Basilio",
+    "email": "italobasiliodasilva@gmail.com",
+    "url": "https://github.com/ItaloBasilio"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -20,6 +24,7 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   },
   "dependencies": {
